# agent-verse

./: .env.sample  .gitignore  CLAUDE.md  README.md  compose.yml  langgraph.json  main.py  pyproject.toml
backend/: .gitignore  langgraph.json  pyproject.toml
backend/.amalgamation/: README.md  amalgamation.sh
backend/project/api/: lifespan.py  main.py
backend/project/api/router/: hello.py  text.py
backend/project/graph/: env.py  graph.py  human.py  llm.py  main.py  model.py
backend/project/graph/agent/: __init__.py
backend/project/graph/agent/agents/: agents.py
backend/project/graph/agent/coordinator/: coordinator.py
backend/project/graph/agent/evaluator/: evaluator.py
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AdminPage.tsx  ChatInput.tsx  ChatMessage.tsx  ChatUI.tsx  Layout.tsx  PromptDetail.tsx  PromptSidebar.tsx
frontend/src/components/ui/: button.stories.tsx
project/: graph.py  human.py  llm.py  model.py
project/agent/: __init__.py
project/agent/agents/: agents.py
project/agent/coordinator/: coordinator.py
project/agent/evaluator/: evaluator.py
project/agent/generator/: generator.py
project/agent/optimizer/: optimizer.py
project/agent/orchestrator/: orchestrator.py
project/graph/agent/generator/: generator.py
project/graph/agent/optimizer/: optimizer.py
project/graph/agent/orchestrator/: orchestrator.py
